--- a/themes/custom/mytheme/src/main.css
+++ b/themes/custom/mytheme/src/main.css
@@ -238,7 +238,8 @@ li {
   /* transform: translate(-50%, -50%); */
   font-size: 10rem;
   /* large screens */
-  color: #84ACDE;
+  color: #bbbaba;
+  font-weight: 100;
   text-align: center;
   letter-spacing: -0.05em;
   z-index: 100;
@@ -276,7 +277,7 @@ li {
   position: relative;
   width: 25px;
   height: 2px;
-  background: #84ACDE;
+  background: #818898;
   border-radius: 2px;
   transition: all left 0.2s ease-in-out;
 }
@@ -322,7 +323,7 @@ li {
   top: 50%;
   transform: translateY(-50%);
   width: 3px;
-  height: 40%;
+  height: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -333,7 +334,7 @@ li {
   position: relative;
   width: 25px;
   height: 2px;
-  background: #84ACDE;
+  background: #818898;
   border-radius: 2px;
   transition: all 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
   opacity: 0.6;
@@ -353,7 +354,8 @@ li {
   top: 50%;
   transform: translateY(-50%);
   margin-right: 10px;
-  color: gray;
+  color: #bbbaba;
+  font-weight: 100;
   font-size: 16px;
   white-space: nowrap;
   opacity: 0;
@@ -361,6 +363,7 @@ li {
 }
 
 .timeline-tick.active .tick-year {
+  color: #e2e2e2;
   opacity: 1;
 }
 
