--- a/themes/custom/mytheme/templates/node--1.html.twig
+++ b/themes/custom/mytheme/templates/node--1.html.twig
@@ -28,17 +28,17 @@
 <section
 	class="!px-6 !py-8 flex flex-col lg:flex-row lg:items-start items-center lg:justify-around justify-center gap-12 !mb-24 relative z-[20]">
 	<!-- LEFT SIDE -->
-	<div class="flex flex-col gap-4 max-w-xl text-left">
-		<h2 class="text-4xl font-normal text-[#285F99]">
+	<div data-aos="fade-up" class="flex flex-col gap-4 max-w-xl text-left">
+		<h2 data-aos="fade-up" class="text-4xl font-normal text-[#285F99]">
 			The Power of Purpose
 		</h2>
-		<p class="text-base sm:text-lg leading-7 sm:leading-9 lg:leading-12 text-[#5B5B5B]">
+		<p data-aos="fade-up" class="text-base sm:text-lg leading-7 sm:leading-9 lg:leading-12 text-[#5B5B5B]">
 			Al Faisal Holding is one of Qatar’s leading private companies that
 																		          played a significant role in the development of the Qatar economy and
 																		          infrastructure, attracting many foreign investments and creating
 																		          immense career opportunities.
 		</p>
-		<a href="#" class="text-[#285F99] !mt-4 !px-4 !py-1.5 sm:!py-2 border border-[#9D8055] font-medium
+		<a data-aos="fade-up" href="#" class="text-[#285F99] !mt-4 !px-4 !py-1.5 sm:!py-2 border border-[#9D8055] font-medium
 						          hover:bg-blue-100 transition-all duration-300 rounded text-lg
 						          w-fit flex items-center gap-2 focus-visible:outline-none
 						          focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#9D8055]" aria-label="Read more about Faisal Holding">
@@ -48,7 +48,7 @@
 	</div>
 
 	<!-- RIGHT SIDE -->
-	<div class="bg-[#E0E4E8]/90 w-full max-w-md !px-6 !py-10 rounded-[12px] text-left xl:!-mt-56">
+	<div data-aos="fade-up" data-aos-duration="3000" class="bg-[#E0E4E8]/90 w-full max-w-md !px-6 !py-10 rounded-[12px] text-left xl:!-mt-56">
 		<div class="flex flex-col gap-4 text-[#445467]">
 			<h2 class="text-2xl sm:text-[28px] font-thin">Our Establishment</h2>
 			<p class="text-base sm:text-lg">
@@ -95,11 +95,11 @@
 <section class="!px-4 sm:!px-8 lg:!px-12 !py-6 sm:!py-8 lg:!py-6 flex flex-col xl:flex-row items-center justify-around gap-6 sm:gap-8 lg:!mb-60 !mb-16 sm:!mb-24 relative">
 	<img src="{{ theme_path }}/assets/static/AF_Element.svg" alt="" class="h-100 absolute z-0 top-90 left-[30%] xl:!block hidden"/>
 
-	<div class="relative z-[10] w-full xl:w-auto flex justify-center">
+	<div data-aos="zoom-in" class="relative z-[10] w-full xl:w-auto flex justify-center">
 		<img src="{{ theme_path }}/assets/static/chairman.jpg" alt="Chairman" class="h-56 sm:h-70 lg:h-100 xl:h-120 w-auto max-w-full object-cover rounded-lg"/>
 	</div>
 
-	<div class="flex flex-col gap-3 sm:gap-4 max-w-full sm:max-w-lg xl:max-w-sm relative z-[10] !px-2 sm:!px-0 items-center xl:items-start">
+	<div data-aos="fade-up" class="flex flex-col gap-3 sm:gap-4 max-w-full sm:max-w-lg xl:max-w-sm relative z-[10] !px-2 sm:!px-0 items-center xl:items-start">
 		<p class="leading-7 sm:leading-9 lg:leading-12 text-lg sm:text-2xl lg:text-3xl text-[#518DCC] font-normal text-center xl:text-left">
 			"Today we pride ourselves on being a trustworthy household name both
 																		          in Qatar & beyond."
@@ -121,11 +121,11 @@
 
 <section class="!px-4 sm:!px-8 lg:!px-12 !py-6 sm:!py-8 lg:!py-6 flex flex-col lg:flex-row items-center justify-around gap-8 lg:gap-16 !mb-16">
 	<div class="w-full lg:w-auto">
-		<div class="flex flex-col gap-3 sm:gap-4 !p-2 sm:!p-4">
-			<h2 class="text-2xl sm:text-3xl lg:text-4xl font-normal text-[#285F99]">
+		<div  class="flex flex-col gap-3 sm:gap-4 !p-2 sm:!p-4">
+			<h2 data-aos="fade-up" class="text-2xl sm:text-3xl lg:text-4xl font-normal text-[#285F99]">
 				Global Footprint
 			</h2>
-			<p class="text-base sm:text-lg max-w-xl leading-7 sm:leading-9 lg:leading-12 text-[#5B5B5B]">
+			<p data-aos="fade-up" class="text-base sm:text-lg max-w-xl leading-7 sm:leading-9 lg:leading-12 text-[#5B5B5B]">
 				Al Faisal Holding has a meticulously crafted investment strategy
 																								            based on thorough market research, ensuring the identification of
 																								            robust and growth-oriented sectors and geographies.
@@ -133,7 +133,7 @@
 		</div>
 
 		<!-- Stats Cards -->
-		<div class="flex flex-wrap sm:flex-nowrap gap-2 sm:gap-3 !ml-0 sm:!ml-4 !mt-6 sm:!mt-8 text-[#424557] justify-center sm:justify-start">
+		<div data-aos="fade-up" class="flex flex-wrap sm:flex-nowrap gap-2 sm:gap-3 !ml-0 sm:!ml-4 !mt-6 sm:!mt-8 text-[#424557] justify-center sm:justify-start">
 			<div class="w-28 h-36 sm:w-32 sm:h-40 lg:w-32 lg:h-40 !px-3 sm:!px-4 !py-6 sm:!py-8 bg-[#C6D9DE] flex flex-col items-center rounded-2xl">
 				<h1 class="text-3xl sm:text-4xl text-left w-full font-thin">60</h1>
 				<p class="text-xs sm:text-sm text-left w-full !mt-3 sm:!mt-4">
@@ -160,7 +160,7 @@
 		</div>
 	</div>
 
-	<div class="w-full lg:w-auto flex justify-center">
+	<div data-aos="zoom-in" class="w-full lg:w-auto flex justify-center">
 		<img src="{{ theme_path }}/assets/static/Layer 24.png" alt="footprint" class="h-60 sm:h-80 lg:h-100 w-auto max-w-full object-contain"/>
 	</div>
 </section>
