--- a/themes/custom/mytheme/templates/partials/header.html.twig
+++ b/themes/custom/mytheme/templates/partials/header.html.twig
@@ -1,6 +1,6 @@
 {% set theme_path = theme_path ?? (base_path ~ 'themes/custom/mytheme') %}
 
-<header>
+<header class="sticky top-0 z-50 bg-[#f7f0e9]/90 backdrop-blur">
 	<nav class="flex items-center justify-between !px-4 sm:!px-8 lg:!px-12">
 		<div>
 			<img src="{{ theme_path }}/assets/static/Header_Logo.svg" alt="head_logo" class="h-20 sm:h-25">
