--- a/themes/custom/mytheme/templates/node--2.html.twig
+++ b/themes/custom/mytheme/templates/node--2.html.twig
@@ -17,7 +17,7 @@
            alt="60 years"
            class="w-3/4 sm:w-1/2 md:w-2/5 lg:w-1/3 xl:w-1/4 max-w-[640px] min-w-[180px]" />
 
-      <p data-aos="fade-up" class="max-w-4xl text-[#e5e0d9] font-thin text-2xl sm:text-3xl md:text-4xl leading-relaxed sm:leading-relaxed md:leading-normal">
+      <p data-aos="fade-up" class="max-w-4xl text-[#e5e0d9] font-thin text-[29px] leading-relaxed sm:leading-relaxed md:leading-normal">
         Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Quis ipsum suspendisse ultrices gravida.
       </p>
@@ -28,7 +28,7 @@
 <div class="tile-bg">
 <section>
 	<div class="w-full flex justify-center !px-4 sm:!px-6 lg:!px-8 !py-10 sm:!py-14 lg:!py-20 text-[#606060] !mb-12 sm:!mb-16 lg:!mb-20">
-		<p data-aos="fade-up" class="text-center max-w-6xl text-2xl sm:text-3xl md:text-4xl leading-relaxed sm:leading-relaxed md:leading-normal">
+		<p data-aos="fade-up" class="text-center max-w-6xl text-[29px] leading-relaxed sm:leading-relaxed md:leading-normal">
 			Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
 			          magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
 			          viverra maecenas accumsan lacus vel facilisis.
@@ -78,7 +78,7 @@
 	class="!mt-60 relative">
 	<!-- Bottom text -->
 	<div class="w-full flex justify-center !px-4 sm:!px-6 lg:!px-8 !py-10 sm:!py-14 lg:!py-20 text-[#606060]  relative z-20">
-		<p data-aos="fade-up" class="text-center max-w-6xl text-2xl sm:text-3xl md:text-4xl leading-relaxed sm:leading-relaxed md:leading-normal">
+		<p data-aos="fade-up" class="text-center max-w-6xl text-[29px] leading-relaxed sm:leading-relaxed md:leading-normal">
 			Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
 			          maecenas accumsan lacus vel facilisis.
 		</p>
