--- a/themes/custom/mytheme/templates/partials/header.html.twig
+++ b/themes/custom/mytheme/templates/partials/header.html.twig
@@ -7,13 +7,13 @@
 		</div>
 
 		<div class="hidden md:!flex items-center text-[17px] font-normal gap-4 text-[#424557]">
-			<a href="#" class="hover:text-[#C4A574]">About</a>
-			<a href="#" class="hover:text-[#C4A574]">Businesses</a>
-			<a href="#" class="hover:text-[#C4A574]">Media</a>
-			<a href="#" class="hover:text-[#C4A574]">Philanthropy</a>
-			<a href="/timeline" class="hover:text-[#C4A574]">Timeline</a>
-			<a href="#" class="hover:text-[#C4A574]">Contact</a>
-			<img src="{{ theme_path }}/assets/static/Search_Icon.svg" alt="search" class="h-5">
+			<a href="#" class="hover:text-[#B2886D]">About</a>
+			<a href="#" class="hover:text-[#B2886D]">Businesses</a>
+			<a href="#" class="hover:text-[#B2886D]">Media</a>
+			<a href="#" class="hover:text-[#B2886D]">Philanthropy</a>
+			<a href="/timeline" class="hover:text-[#B2886D]">Timeline</a>
+			<a href="#" class="hover:text-[#B2886D]">Contact</a>
+			<img src="{{ theme_path }}/assets/static/Search_Icon.svg" alt="search" class="h-5 transition-transform duration-200 ease-out hover:scale-110 focus:scale-110">
 		</div>
 
 		<div class="md:hidden flex items-center">
@@ -39,14 +39,14 @@
 			</div>
 
 			<div class="flex flex-col gap-6 !px-6 !py-4 text-[17px] font-normal text-[#424557] overflow-y-auto flex-1">
-				<a href="#" class="hover:text-[#C4A574] border-b border-gray-200 pb-3">About</a>
-				<a href="#" class="hover:text-[#C4A574] border-b border-gray-200 pb-3">Businesses</a>
-				<a href="#" class="hover:text-[#C4A574] border-b border-gray-200 pb-3">Media</a>
-				<a href="#" class="hover:text-[#C4A574] border-b border-gray-200 pb-3">Philantrophy</a>
-				<a href="/timeline" class="hover:text-[#C4A574] border-b border-gray-200 pb-3">Timeline</a>
-				<a href="#" class="hover:text-[#C4A574] border-b border-gray-200 pb-3">Contact</a>
+				<a href="#" class="hover:text-[#B2886D] border-b border-gray-200 pb-3">About</a>
+				<a href="#" class="hover:text-[#B2886D] border-b border-gray-200 pb-3">Businesses</a>
+				<a href="#" class="hover:text-[#B2886D] border-b border-gray-200 pb-3">Media</a>
+				<a href="#" class="hover:text-[#B2886D] border-b border-gray-200 pb-3">Philanthropy</a>
+				<a href="/timeline" class="hover:text-[#B2886D] border-b border-gray-200 pb-3">Timeline</a>
+				<a href="#" class="hover:text-[#B2886D] border-b border-gray-200 pb-3">Contact</a>
 				<div class="pt-4">
-					<img src="{{ theme_path }}/assets/static/Search_Icon.svg" alt="search" class="h-5">
+					<img src="{{ theme_path }}/assets/static/Search_Icon.svg" alt="search" class="h-5 transition-transform duration-200 ease-out hover:scale-110 focus:scale-110">
 				</div>
 			</div>
 		</div>
